[gd_scene load_steps=3 format=3 uid="uid://btlk2iopckrs2"]

[ext_resource type="PackedScene" uid="uid://bktdjabe2w6by" path="res://card.tscn" id="1_pq8q7"]
[ext_resource type="Script" uid="uid://bb4hulymiajsu" path="res://root.gd" id="1_pyidc"]

[node name="Root" type="Node2D"]
script = ExtResource("1_pyidc")

[node name="Card1" parent="." instance=ExtResource("1_pq8q7")]
position = Vector2(575, 108)
scale = Vector2(0.403605, 0.393653)

[node name="Card2" parent="." instance=ExtResource("1_pq8q7")]
z_index = 1
position = Vector2(489, 220)

[node name="Card3" parent="." instance=ExtResource("1_pq8q7")]
z_index = 1
position = Vector2(659, 221)

[node name="Card4" parent="." instance=ExtResource("1_pq8q7")]
z_index = 2
position = Vector2(401, 329)

[node name="Card5" parent="." instance=ExtResource("1_pq8q7")]
z_index = 2
position = Vector2(575, 330)

[node name="Card6" parent="." instance=ExtResource("1_pq8q7")]
z_index = 2
position = Vector2(750, 330)

[node name="Card7" parent="." instance=ExtResource("1_pq8q7")]
z_index = 3
position = Vector2(317, 438)

[node name="Card8" parent="." instance=ExtResource("1_pq8q7")]
z_index = 3
position = Vector2(488, 438)

[node name="Card9" parent="." instance=ExtResource("1_pq8q7")]
z_index = 3
position = Vector2(663, 438)

[node name="Card10" parent="." instance=ExtResource("1_pq8q7")]
z_index = 3
position = Vector2(838, 438)

[node name="Discard" parent="." instance=ExtResource("1_pq8q7")]
position = Vector2(120, 147)

[node name="New Game" type="Button" parent="."]
offset_left = 53.0
offset_top = 457.0
offset_right = 180.0
offset_bottom = 506.0
text = "New Game"

[node name="Deal" type="Button" parent="."]
offset_left = 67.0
offset_top = 275.0
offset_right = 164.0
offset_bottom = 306.0
text = "Deal"

[node name="DealsLabel" type="Label" parent="Deal"]
layout_mode = 0
offset_left = -7.0
offset_top = 59.0
offset_right = 116.0
offset_bottom = 116.0

[connection signal="pressed" from="New Game" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Deal" to="." method="_on_deal_button_pressed"]
